# Javelin

./: .gitignore  ARCHITECTURE.md  BUSINESS_REQUIREMENTS.md  CLEAN_ARCHITECTURE_STATUS.md  COMMAND_QUERY_SEPARATION_COMPLETE.md  CQRS_EVENT_SOURCING_ARCHITECTURE.md  Cargo.toml  DEVELOPMENT_GUIDE.md  DEV_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PROJECTOR_ARCHITECTURE.md  README.md  REPOSITORY_NAMING_FIX_COMPLETE.md  bacon.toml  financialCloseFinalReport.md  implementation_check_report.md  requirements.md  rustfmt.toml
crates/javelin/: Cargo.toml
crates/javelin-adapter/: Cargo.toml
crates/javelin-adapter/src/: controller.rs  error.rs  input_mode.rs  lib.rs  navigation.rs  page_states.rs  presenter.rs  views.rs
crates/javelin-adapter/src/controller/: account_master_controller.rs  adjust_accounts_controller.rs  application_settings_controller.rs  apply_ifrs_valuation_controller.rs  batch_history_controller.rs  closing_controller.rs  company_master_controller.rs  consolidate_ledger_controller.rs  evaluate_materiality_controller.rs  generate_comprehensive_financial_statements_controller.rs  generate_financial_statements_controller.rs  generate_note_draft_controller.rs  generate_trial_balance_controller.rs  invoice_print_controller.rs  journal_detail_controller.rs  journal_entry_controller.rs  ledger_controller.rs  lock_closing_period_controller.rs  prepare_closing_controller.rs  search_controller.rs  subsidiary_account_master_controller.rs  verify_ledger_consistency_controller.rs
crates/javelin-adapter/src/navigation/: controllers.rs  end_to_end_tests.rs  memory_leak_tests.rs  nav_action.rs  navigation_integration_tests.rs  navigation_property_tests.rs  navigation_stack.rs  navigation_stack_tests.rs  page_state.rs  presenter_registry.rs  route.rs
crates/javelin-adapter/src/page_states/: account_adjustment_page_state.rs  account_master_page_state.rs  application_settings_page_state.rs  billing.rs  closing.rs  closing_lock_page_state.rs  closing_menu_page_state.rs  closing_preparation.rs  closing_preparation_execution_page_state.rs  closing_preparation_page_state.rs  financial_statement_page_state.rs  fixed_assets.rs  home.rs  home_page_state.rs  ifrs_valuation_page_state.rs  journal_entry_page_state.rs  ledger_consolidation_execution_page_state.rs  ledger_consolidation_page_state.rs  ledger_detail_page_state.rs  ledger_menu_page_state.rs  ledger_page_state.rs  management_accounting.rs  master_management_menu_page_state.rs  note_draft_page_state.rs  notes_menu_page_state.rs  primary_records.rs  primary_records_menu_page_state.rs  risk_radar_page_state.rs  search_page_state.rs  stub_page_state.rs  subsidiary_account_master_page_state.rs
crates/javelin-adapter/src/presenter/: account_master_presenter.rs  application_settings_presenter.rs  batch_history_presenter.rs  company_master_presenter.rs  comprehensive_financial_statements_presenter.rs  fixed_asset_presenter.rs  invoice_print_presenter.rs  journal_entry_presenter.rs  ledger_consistency_verification_presenter.rs  ledger_presenter.rs  materiality_evaluation_presenter.rs  search_presenter.rs  subsidiary_account_master_presenter.rs
crates/javelin-adapter/src/views/: compliance_risk_radar.rs  components.rs  layouts.rs  pages.rs  terminal_manager.rs  utils.rs
crates/javelin-application/: Cargo.toml
crates/javelin-application/src/: error.rs  interactor.rs  lib.rs  output_ports.rs  projection_builder.rs  query_service.rs
crates/javelin-application/src/dtos/: batch_execution_dto.rs  request.rs  response.rs
crates/javelin-application/src/input_ports/: adjust_accounts.rs  apply_ifrs_valuation.rs  approve_journal_entry.rs  cancel_journal_entry.rs  consolidate_ledger.rs  correct_journal_entry.rs  create_additional_entry.rs  create_reclassification_entry.rs  create_replacement_entry.rs  create_reversal_entry.rs  delete_draft_journal_entry.rs  evaluate_materiality.rs  fetch_account_master.rs  fetch_application_settings.rs  fetch_company_master.rs  fetch_subsidiary_account_master.rs  generate_comprehensive_financial_statements.rs  generate_financial_statements.rs  generate_note_draft.rs  generate_trial_balance.rs  get_batch_history.rs  get_journal_entry_detail.rs  load_account_master.rs  load_application_settings.rs  load_company_master.rs  load_subsidiary_account_master.rs  lock_closing_period.rs  prepare_closing.rs  print_invoice_input_port.rs  register_journal_entry.rs  reject_journal_entry.rs  reverse_journal_entry.rs  search_journal_entry.rs  submit_for_approval.rs  update_draft_journal_entry.rs  verify_ledger_consistency.rs
crates/javelin-application/src/interactor/: batch_history.rs  closing.rs  journal_entry.rs  master_data.rs  print_invoice_interactor.rs  tests.rs
crates/javelin-application/src/output_ports/: adjust_accounts.rs  closing.rs  common.rs  invoice_print.rs  invoice_printer.rs  journal_entry.rs  master_data.rs  query.rs  search.rs
crates/javelin-application/src/query_service/: account_master_query_service.rs  application_settings_master_query_service.rs  batch_history_query_service.rs  company_master_query_service.rs  compliance_risk_query_service.rs  invoice_query_service.rs  journal_entry_finder.rs  journal_entry_search_query_service.rs  ledger_query_service.rs  master_data_loader.rs  (+1 more)
crates/javelin-domain/: Cargo.toml
crates/javelin-domain/src/: accounting_period_ledger.rs  balance_tracking.rs  batch.rs  billing.rs  cash_flow.rs  chart_of_accounts.rs  common.rs  company.rs  compliance_risk.rs  entity.rs  error.rs  event.rs  evidence.rs  financial_close.rs  journal_entry.rs  lib.rs  masters.rs  partner.rs  reconciliation.rs  repositories.rs  service.rs  system_masters.rs  value_object.rs
crates/javelin-infrastructure/: Cargo.toml
crates/javelin-infrastructure/src/: lib.rs  read.rs  shared.rs  write.rs
crates/javelin-infrastructure/templates/: invoice.typ
crates/javelin/src/: app.rs  app_builder.rs  app_error.rs  app_resolver.rs  app_setup.rs  lib.rs  main.rs
crates/javelin/tests/: integration_test.rs  master_data_integration_test.rs  projection_sync_test.rs
(+515 files in other folders)
