[package]
name = "javelin-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
javelin-application = { workspace = true }
javelin-infrastructure = { workspace = true }
javelin-domain = { workspace = true }

# External dependencies
thiserror = { workspace = true }
tokio = { workspace = true }
ratatui = { version = "0.30", features = ["widget-calendar"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
color-eyre = { workspace = true }
chrono = { workspace = true }
time = { version = "0.3", features = ["local-offset", "macros"] }
uuid = { workspace = true }
lazy_static = "1.4"

