[package]
name = "javelin-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Domain layer has NO external dependencies except for basic utilities
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# `mockall` is needed by consumers of the domain mocks, so expose it as a
# normal dependency rather than a dev-dependency.
mockall = "0.14.0"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
